--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,10 +11,25 @@
   {{ 'application.scss.css' | asset_url | stylesheet_tag }}
   {{ 'application.js' | asset_url | script_tag }}
 </head>
-<body>
+<body class="template-{{template}}">
+
+  {% if template != 'cart' %}
+    <a href="/cart" class="link-to-cart">
+      {% if cart.item_count > 0 %}
+      {{ 'cart.button.filled' | t }}
+      {% else %}
+      {{ 'cart.button.empty' | t }}
+      {% endif %}
+    </a>
+  {% else %}
+    <a href="/index" class="link-to-home">
+      Link to Home
+    </a>
+  {% endif %}
 
   <main role="main">
     {{ content_for_layout }}
   </main>
+
 </body>
 </html>
