Mark up empty cart state

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -22,8 +22,8 @@
       {% endif %}
     </a>
   {% else %}
-    <a href="/index" class="link-to-home">
-      Link to Home
+    <a href="/" class="link-to-home">
+      {{ 'cart.button.close' | t }}
     </a>
   {% endif %}
 
